# CQF-TSN5G

./: .gitignore  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: CPPEXE.language.settings.xml  CPPTEST.language.settings.xml  CQFscheduler.language.settings.xml  tsnfivegcomm.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: CPPTEST.sc  CQFscheduler.sc  Simu5G.sc  inet.sc  tsnfivegcomm.sc
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
5GTQ/Simu5G/: .gitignore
5GTQ/inet/: .cproject
CQFscheduler/: .cproject  .gitignore  .project  CQFscheduler  CQFscheduler_dbg  Makefile  log.txt  test.txt9 76 76
CQFscheduler/simulations/: package.ned  run
CQFscheduler/simulations/NR/networks/: omnetpp.ini  (+1 more)
CQFscheduler/src/: .cproject  .project  CQFscheduler_dbg  NRAmcpub.cc  NRAmcpub.h  Scheduler.cc  Scheduler.h  main.cc  package.ned
Simu5G/: .gitignore  .project
research/: NRAmc.py  NRMcs.py  UserTxParams.py  calculater.py  data.txt  flows.py  pyproject.toml  record.ipynb  record.py
research/src/cqftsn5g/: __main__.py  assignment_plot.py  calculate_rbs.py  cp.py  flow_generate.ipynb  flows.json  flows.py
research/src/cqftsn5g/modules/: AmcPilotAuto.py  Models.py  NRAmc.py  NRMcs.py  UserTxParams.py
test/: Makefile  hello.cc
test/src/: Makefile  main.cc
tsnfivegcomm/: .gitignore
(+150 files in other folders)
